--- a/.gitattributes
+++ b/.gitattributes
@@ -2,3 +2,4 @@
 *.mov filter=lfs diff=lfs merge=lfs -text
 *.zip filter=lfs diff=lfs merge=lfs -text
 *.tar.gz filter=lfs diff=lfs merge=lfs -text
+*.part* filter=lfs diff=lfs merge=lfs -text
