--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
-    "name": "zoo_arcadia",
-    "description": "Zoo d'Arcadia Web Application",
-    "require": {
-      "php": "^7.4|^8.0"
-    }
+  "name": " zoo_arcadia ",
+  "description": "Zoo Arcadia Project",
+  "require": {
+    "php": "^7.4 || ^8.0"
   }
+}
