--- a/public/.htaccess
+++ b/public/.htaccess
@@ -1,7 +1,4 @@
 RewriteEngine On
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
-RewriteRule . index.php [L]
-
-RewriteEngine On
-RewriteRule ^tests/(.*)$ tests/$1 [L]
+RewriteRule ^ index.php [QSA,L]
