--- a/vercel.json
+++ b/vercel.json
@@ -3,7 +3,8 @@
   "builds": [
     {
       "src": "index.php",
-      "use": "@vercel/php"
+      "use": "@vercel/static-build",
+      "config": { "distDir": "public" }
     }
   ],
   "routes": [
