--- a/vercel.json
+++ b/vercel.json
@@ -2,15 +2,14 @@
   "version": 2,
   "builds": [
     {
-      "src": "index.php",
-      "use": "@vercel/static-build",
-      "config": { "distDir": "public" }
+      "src": "public/index.php",
+      "use": "@vercel/php"
     }
   ],
   "routes": [
     {
       "src": "/(.*)",
-      "dest": "/index.php"
+      "dest": "/public/index.php"
     }
   ]
 }
