--- a/vercel.json
+++ b/vercel.json
@@ -3,7 +3,14 @@
   "builds": [
     {
       "src": "api/index.php",
-      "use": "vercel-php"
+      "use": "@vercel/php",
+      "config": {
+        "includeFiles": [
+          "public/**",
+          "src/**"
+        ],
+        "installCommand": "apt-get update && apt-get install -y libssl-dev"
+      }
     }
   ],
   "routes": [
