--- a/vercel.json
+++ b/vercel.json
@@ -2,20 +2,8 @@
   "version": 2,
   "builds": [
     {
-      "src": "api/index.php",
-      "use": "vercel-php",
-      "config": {
-        "includeFiles": [
-          "public/**",
-          "src/**"
-        ]
-      }
-    }
-  ],
-  "routes": [
-    {
-      "src": "/(.*)",
-      "dest": "/api/index.php"
+      "src": "Dockerfile",
+      "use": "@vercel/docker"
     }
   ]
 }
